--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <input type="password" placeholder="password" id="password" class="form-control">
                         <label for="confirmpassword">Confirm Password</label>
                         <input type="password" placeholder="confirm password" id="confirmpassword" class="form-control">
-                        <p class="warning text-danger">Password not same with confirm password</p>
+                        <p class="warning text-danger">Password not same with confirm password</p><p class="warn text-danger">Username is not valid</p>
                         <button id="submitForm" class="btn btn-success form-control mt-3">Register</button>
                     </div>
                 </div>
